<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/go_home"
        app:showAsAction="ifRoom"
        android:title="Add"
        android:icon="@drawable/home_button"
        />
</menu>