<resources>
    <string name="app_name">MentorMe</string>
    <string name="empty_string"></string>

    <string name="server_client_id">1094878569026-43t5s1j7ki03bbqkjlnu8tsu7lu6kede.apps.googleusercontent.com</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home"></string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="invalid_account">Invalid account</string>
    <string name="please_log_in_with_csumb_account">Please log in with a CSUMB account</string>
    <string name="ok">Ok</string>
    <string name="topics">Topics</string>
    <string name="mentors">Mentors</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="mentor_info">Mentor Info</string>
    <string name="add_mentor">Sign Up</string>
    <string name="subjects">Subjects</string>
</resources>
