<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mentorme"
    tools:context=".login.LoginActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_view"
        android:visibility="gone"
        android:text=""/>

    <ProgressBar
        android:id="@+id/loading_sign_in"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:indeterminate="true"
        android:max="100"
        android:minHeight="200dp"
        android:minWidth="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/login_button"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@drawable/common_google_signin_btn_text_dark_normal" />
</RelativeLayout>
