<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".homeScreen.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <include layout="@layout/toolbar_layout_no_back_arrow"
            android:id="@+id/toolbar_layout"></include>

        <include layout="@layout/home_layout"></include>

        <include layout="@layout/content_home"/>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>